# Veltris_Codex

./: .gitignore  README.md  docker-compose.yml  index.html  prime.py  prime_unoptimized.py  test_clean.py  vite.config.ts
ai-services/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
ai-services/generated_docs/: BRD.md  SRD.md
ai-services/src/: config.py  main.py
ai-services/src/models/: chat.py  streaming.py  tools.py
ai-services/src/routes/: __init__.py  chat.py  files.py  models.py  test_generation.py
ai-services/src/services/: tool_executor.py
ai-services/src/services/providers/: __init__.py  claude_provider.py  ollama_provider.py  openai_provider.py
ai-services/src/services/tools/: __init__.py  code_analyzer.py  code_diff.py  code_generator.py  code_review_service.py  doc_generator.py  file_modification.py  file_system.py  refactor.py  security_analyzer.py  smart_action_service.py  test_generator.py
gateway/: .env.example  .env.test  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
gateway/docs/: frontend-integration.md
gateway/src/: config.ts  server.ts
gateway/src/middleware/: auth.ts  cors.ts  error.ts  rateLimit.ts  validation.ts
gateway/src/routes/: chat.ts  files.ts  health.ts  models.ts  test-generation.ts
gateway/src/services/: aiProxy.ts  files.ts  toolExecutor.ts
gateway/src/services/ai/providers/: claude.ts  openai.ts
gateway/src/services/ai/tools/: codeAnalyzer.ts  codeDiff.ts  docGenerator.ts  refactor.ts
gateway/src/types/: api.ts  streaming.ts  tools.ts
gateway/tests/: setup.ts
gateway/tests/integration/: chat.test.ts  health.test.ts  models.test.ts
gateway/tests/unit/tools/: codeAnalyzer.test.ts  codeDiff.test.ts  docGenerator.test.ts
src/: App.tsx  TodoApp.js  index.css
src/components/: ChatPanel.tsx  DiffApprovalModal.tsx  DiffViewer.tsx  DocumentationModal.tsx  Editor.tsx  FileAutocomplete.tsx  MultiCodeGeneratorModal.tsx  Sidebar.tsx  TestGenerationPanel.tsx  TopBar.tsx
src/hooks/: useAIChat.ts  useAppContext.tsx  useConnectionStatus.ts  useTestGeneration.tsx
src/lib/: api.ts  fileUtils.ts  testGenerationApi.ts
src/pages/: Index.tsx
src/types/: api.ts  testGeneration.ts
src/utils/: modelMapping.ts
